# example-oauth2-server

./: .gitignore  .pre-commit-config.yaml  README.md  app.py  client.py  client_requests_body.py  client_requests_header.py  mongo_server.py  pyproject.toml  requirements.txt  test.py
templates/: authorize.html  home.html
website/: app.py  models.py  oauth2.py  routes.py
website/templates/: authorize.html  home.html
